--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                             <img class="background2" src="images/black.png" alt="" srcset="" />
                         </div>
                         <div class="card-content">
-                            <p>Regular Fit Long Sleeve Top</p>
+                            <p>Black Crop Tailored Jacket</p>
                             <div class="feed">
-                                <span>$38.99</span>
-                                <span>5.0 ⭐</span>
+                                <span>$62.99</span>
+                                <span>4.9 ⭐</span>
                             </div>
                         </div>
                     </div>
@@ -94,9 +94,9 @@
                         <div class="img">
                             <img class="background3" src="images/textured.png" alt="" srcset="" />
                         </div>
-                        <p>Regular Fit Long Sleeve Top</p>
+                        <p>Textured Sunset Shirt</p>
                         <div class="feed">
-                            <span>$38.99</span>
+                            <span>$49.99</span>
                             <span>5.0 ⭐</span>
                         </div>
                     </div>
@@ -108,16 +108,16 @@
             <!-- End Selling -->
             <!-- Start Product -->
             <div class="product">
-                <h3>Our product</h3>
+                <h3>Our products</h3>
                 <div class="card-wrapper">
                     <div class="card">
                         <div class="img">
                             <img src="images/1.png" alt="" srcset="" />
                         </div>
                         <div class="card-content">
-                            <p>White Solid Formal Shirt</p>
+                            <p>Spread Collar Shirt</p>
                             <div class="feed">
-                                <span>$38.99</span>
+                                <span>$48.99</span>
                                 <span>5.0 ⭐</span>
                             </div>
                         </div>
@@ -127,10 +127,10 @@
                             <img src="images/5.png" alt="" srcset="" />
                         </div>
                         <div class="card-content">
-                            <p>Gray Solid Padded Jacket</p>
+                            <p>White Solid Formal Shirt</p>
                             <div class="feed">
-                                <span>$38.99</span>
-                                <span>5.0 ⭐</span>
+                                <span>$39.99</span>
+                                <span>4.9 ⭐</span>
                             </div>
                         </div>
                     </div>
@@ -139,10 +139,10 @@
                             <img class="background3" src="images/8.png" alt="" srcset="" />
                         </div>
                         <div class="card-content">
-                            <p>Regular Fit Long Sleeve Top</p>
+                            <p>Shine On Me Blouse</p>
                             <div class="feed">
-                                <span>$38.99</span>
-                                <span>5.0 ⭐</span>
+                                <span>$42.99</span>
+                                <span>4.8  ⭐</span>
                             </div>
                         </div>
                     </div>
@@ -151,10 +151,10 @@
                             <img src="images/4.png" alt="" srcset="" />
                         </div>
                         <div class="card-content">
-                            <p>Regular Fit Long Sleeve Top</p>
+                            <p>Gray Solid Padded Jacket</p>
                             <div class="feed">
-                                <span>$38.99</span>
-                                <span>5.0 ⭐</span>
+                                <span>$32.99</span>
+                                <span>4.7  ⭐</span>
                             </div>
                         </div>
                     </div>
@@ -163,9 +163,9 @@
                             <img src="images/5.png" alt="" srcset="" />
                         </div>
                         <div class="card-content">
-                            <p>Regular Fit Long Sleeve Top</p>
+                            <p>Printed Loose T-shirt</p>
                             <div class="feed">
-                                <span>$38.99</span>
+                                <span>$39.99</span>
                                 <span>5.0 ⭐</span>
                             </div>
                         </div>
@@ -175,10 +175,10 @@
                             <img src="images/6.png" alt="" srcset="" />
                         </div>
                         <div class="card-content">
-                            <p>Regular Fit Long Sleeve Top</p>
+                            <p>Summer Wind Crop Shirt</p>
                             <div class="feed">
-                                <span>$38.99</span>
-                                <span>5.0 ⭐</span>
+                                <span>$39.99</span>
+                                <span>4.7 ⭐</span>
                             </div>
                         </div>
                     </div>
@@ -187,10 +187,10 @@
                             <img src="images/7.png" alt="" srcset="" />
                         </div>
                         <div class="card-content">
-                            <p>Regular Fit Long Sleeve Top</p>
+                            <p>Tailored Jacket</p>
                             <div class="feed">
-                                <span>$38.99</span>
-                                <span>5.0 ⭐</span>
+                                <span>$46.99</span>
+                                <span>4.9 ⭐</span>
                             </div>
                         </div>
                     </div>
@@ -199,9 +199,9 @@
                             <img class="background3" src="images/8.png" alt="" srcset="" />
                         </div>
                         <div class="card-content">
-                            <p>Regular Fit Long Sleeve Top</p>
+                            <p>Solid Round Neck T-shirt</p>
                             <div class="feed">
-                                <span>$38.99</span>
+                                <span>$32.00</span>
                                 <span>5.0 ⭐</span>
                             </div>
                         </div>
@@ -223,10 +223,9 @@
                             <img class="background3" src="images/9.png" alt="" srcset="" />
                         </div>
                         <div class="card-content">
-                            <p class="title">Outerwear</p>
+                            <p class="title">Accessories</p>
                             <div class="feed">
-                                Browse luxurious designer coats, jackets, and blazers to stay
-                                stylishly warm during colder seasons.
+                                Complete your ensemble with designer accessories such as handbags, scarves, belts, and hats.
                             </div>
                         </div>
                     </div>
@@ -235,10 +234,9 @@
                             <img src="images/10.png" alt="" srcset="" />
                         </div>
                         <div class="card-content">
-                            <p class="title">Outerwear</p>
+                            <p class="title">Dresses</p>
                             <div class="feed">
-                                Browse luxurious designer coats, jackets, and blazers to stay
-                                stylishly warm during colder seasons.
+                                Explore a stunning range of designer dresses, including evening gowns and chic day dresses.
                             </div>
                         </div>
                     </div>
@@ -263,10 +261,8 @@
                 <div class="list">
                     <div class="item-list">
                         <span>“</span>
-                        <p class="title">Sarah Thompson</p>
-                        <p class="text">I absolutely love the quality and style of the clothing I purchased from this
-                            website. customer service was outstanding, and I received my order quickly. Highly
-                            recommended!</p>
+                        <p class="title">Emily Wilson</p>
+                        <p class="text">The customer experience was exceptional from start to finish. The website is user-friendly, the checkout process was smooth, and the clothes I ordered fit perfectly. I'm beyond satisfied!</p>
                     </div>
                     <div class="item-list background4">
                         <span>“</span>
@@ -277,10 +273,8 @@
                     </div>
                     <div class="item-list">
                         <span>“</span>
-                        <p class="title">Sarah Thompson</p>
-                        <p class="text">I absolutely love the quality and style of the clothing I purchased from this
-                            website. customer service was outstanding, and I received my order quickly. Highly
-                            recommended!</p>
+                        <p class="title">Olivia Martinez</p>
+                        <p class="text">I had a great experience shopping on this website. The clothes I bought are fashionable and comfortable. Highly satisfied!</p>
                     </div>
                 </div>
             </div>
@@ -310,11 +304,11 @@
                     <li><a href="#">Release</a></li>
                 </ul>
                 <ul class="list-item">
-                    <li class="title">SHOP</li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Overview</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Release</a></li>
+                    <li class="title">Company</li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Support</a></li>
                 </ul>
                 <div class="list-item">
                     <p class="title">stay up to date</p>
