--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="all.min.js"></script>
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Landing Page</title>
+    <title>Fashion Website</title>
 </head>
 
 <body> 
